# Minecraft-pygame-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.bat  requirements.txt
cpp-src/: AABB.h  VAO.cpp  VAO.h  debug.cpp  debug.h  debug_module.cpp  game.cpp  hello.cpp  main.cpp  noise.h  nose.cpp
cpp-src/GL/: Block.h  BlockRender.h  Chunk.h  GL.h  Level.h  Mesh.h  Render.cpp  Render.h  Shader.h  Texture.h  World.h  vertex.h
python-src/: functions.py  main.py  settings.py
python-src/game/: Particles.py  Scene.py
python-src/game/GUI/: Button.py  Editarea.py  GUI.py  Sliderbox.py
python-src/game/blocks/: CubeHandler.py  DestroyBlock.py  droppedBlock.py
python-src/game/entity/: Entity.py  Inventory.py  Player.py
python-src/game/sound/: Sound.py
python-src/game/world/: Chunks.py  Clouds.py  PerlinNoise.py
src/gui/: splashes.txt
src/shaders/: fragment.glsl  vertex.glsl
